# Setup configuration for ADSBCOT: ADS-B to TAK Gateway
#
# Copyright Sensors & Signals LLC https://www.snstac.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[metadata]
name = adsbcot
version = attr: adsbcot.__version__
url = https://github.com/snstac/adsbcot
project_urls =
  CI: GitHub Actions = https://github.com/snstac/adsbcot/actions
  GitHub: issues = https://github.com/snstac/adsbcot/issues
  GitHub: repo = https://github.com/snstac/adsbcot
description = Software for monitoring and analyzing aviation surveillance data (ADS-B) via the Team Awareness Kit (TAK) ecosystem of products.
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Greg Albrecht <oss@undef.net>
maintainer_email = oss@undef.net
license = Apache 2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License

  Intended Audience :: Developers

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  Development Status :: 5 - Production/Stable

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords = 
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK
  TAK Server
  ADS-B
  ADSB
  Aircraft


[options.entry_points]
console_scripts =
    adsbcot = adsbcot.commands:main


[options]
packages = adsbcot
package_dir = 
  adsbcot = adsbcot
python_requires = >=3.6, <4
install_requires = 
  aircot >= 1.2.0
  pytak >= 5.4.0
  aiohttp < 4.0.0
  asyncinotify


[options.extras_require]
with_pymodes = pymodes >= 2.8
with_takproto = takproto >= 2.0.0
test = 
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black
